# kids_lora_gps

./: LICENSE  README.md
components/common/: common.c
components/common/include/: types.h
components/display/display_initializer/: CMakeLists.txt  display_initializer.c
components/display/lvgl/: CMakeLists.txt
components/gps/gps_cbor_coders/: gps_cbor_coders.c
components/gps/gps_cbor_coders/host_test/: .gitignore  CMakeLists.txt
components/gps/gps_cbor_coders/include/: gps_cbor_coders.h
components/gps/gps_cbor_coders/test/: CMakeLists.txt  test_gps_cbor_coders.c
components/gps/gps_cbor_coders/test/host_test/main/: CMakeLists.txt  gps_cbor_coders_test.cpp
components/gps/gps_uart_nmea/: CMakeLists.txt  gps_uart_nmea.c
components/radio/lora/: CMakeLists.txt
kids_lora_gps_rx/: .gitignore  CMakeLists.txt
kids_lora_gps_rx/components/display/: display.c
kids_lora_gps_rx/components/gps/: CMakeLists.txt  Kconfig.projbuild
kids_lora_gps_rx/components/gps_cbor_coders/: gps_cbor_coders.c
kids_lora_gps_rx/components/lora/: lora.c
kids_lora_gps_rx/main/: CMakeLists.txt  kids_lora_gps_rx.c
kids_lora_gps_tx/: .gitignore  CMakeLists.txt  sdkconfig.defaults
kids_lora_gps_tx/components/common/: CMakeLists.txt
kids_lora_gps_tx/components/display/: CMakeLists.txt
kids_lora_gps_tx/components/gps/: gps.c
kids_lora_gps_tx/components/gps_cbor_coders/: CMakeLists.txt
kids_lora_gps_tx/main/: CMakeLists.txt  kids_lora_gps_tx.c
kids_lora_gps_tx/test/: CMakeLists.txt
kids_lora_gps_tx/test/main/: CMakeLists.txt  kids_lora_gps_tx_test.c
(+17 files in other folders)
